modified:   .gitignore 	new file:   README.md 	modified:   brower_agent.ipynb 	new file:   data/1705.07750.pdf 	renamed:    news.txt -> data/news.txt 	new file:   "data/\345\260\217\350\257\264.txt" 	modified:   doc_agents.ipynb 	new file:   main.py 	modified:   pandas_agent.ipynb 	modified:   python_agent.ipynb 	modified:   requirements.txt 	new file:   utils.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 langchain
 openai
-torch==2.0.0+cu117
-torchvision==0.15.1+cu116
-torchaudio==2.0.1
 matplotlib
 pandas
 python-dotenv
 playwright
+beautifulsoup4
+chromadb
+PyPDF2
+faiss-gpu
+unstructured
+pdf2image
+pytesseract
+tabulate
